polyglot-rust: okay-rust — the argon2id Rust kernel over the C ABI, NativeLib through FFM, the Kdf effect; byte-equal to BouncyCastle over 48 cases
Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01LZNspDq7ZU8TRfNoTnpRMD